hard-gists/6094977/run.log
=== Docker Run Log for 6094977 ===
Started at: Mi 29. Okt 16:19:33 CET 2025

[2025-10-29 16:19:33] START: Running container for 6094977
[2025-10-29 16:19:33] SUCCESS: Container a212c2af035597ef86c40dbddbb118a8c9efaa2329e43b8f433f97d364c24626 started for 6094977
=== Container logs for 6094977 ===
  File "/snippet.py", line 211
    print 'Usage: lcdui.py --init --debug --backlightoff'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6094977 ===
[2025-10-29 16:19:35] INFO: Container a212c2af035597ef86c40dbddbb118a8c9efaa2329e43b8f433f97d364c24626 has stopped
